--- a/Project/Project/Views/CourseStudents/Index.cshtml
+++ b/Project/Project/Views/CourseStudents/Index.cshtml
@@ -1,15 +1,37 @@
 ﻿@model IEnumerable<Project.Models.CourseStudent>
+
 @{
     ViewData["Title"] = "Enrollments";
 }
+
 <h1>Enrollments</h1>
-<p><a asp-action="Create" class="btn btn-primary">Create New</a></p>
+
+<p>
+    <a asp-action="Create" class="btn btn-primary">Create New</a>
+</p>
+
+<form asp-action="Index" method="get">
+    <div class="form-actions no-color">
+        <p>
+            Find by student or course name: <input type="text" name="SearchString" value="@ViewData["CurrentFilter"]" />
+            <input type="submit" value="Search" class="btn btn-sm btn-secondary" /> |
+            <a asp-action="Index">Back to Full List</a>
+        </p>
+    </div>
+</form>
+
 <table class="table">
     <thead>
         <tr>
-            <th>@Html.DisplayNameFor(model => model.Course)</th>
-            <th>@Html.DisplayNameFor(model => model.Student)</th>
-            <th>@Html.DisplayNameFor(model => model.Degree)</th>
+            <th>
+                @Html.DisplayNameFor(model => model.Course)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Student)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Degree)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -17,13 +39,19 @@
         @foreach (var item in Model)
         {
             <tr>
-                <td>@Html.DisplayFor(modelItem => item.Course.Name)</td>
-                <td>@Html.DisplayFor(modelItem => item.Student.Name)</td>
-                <td>@Html.DisplayFor(modelItem => item.Degree)</td>
                 <td>
-                    <a asp-action="Edit" asp-route-cId="@item.CrsId" asp-route-sId="@item.StdId">Edit</a> |
-                    <a asp-action="Details" asp-route-cId="@item.CrsId" asp-route-sId="@item.StdId">Details</a> |
-                    <a asp-action="Delete" asp-route-cId="@item.CrsId" asp-route-sId="@item.StdId">Delete</a>
+                    @Html.DisplayFor(modelItem => item.Course.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Student.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Degree)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                 </td>
             </tr>
         }
