--- a/Project/Project/Views/Courses/Index.cshtml
+++ b/Project/Project/Views/Courses/Index.cshtml
@@ -1,17 +1,40 @@
 ﻿@model IEnumerable<Project.Models.Course>
+
 @{
     ViewData["Title"] = "Courses";
 }
+
 <h1>Courses</h1>
-<p><a asp-action="Create" class="btn btn-primary">Create New</a></p>
+
+<p>
+    <a asp-action="Create" class="btn btn-primary">Create New</a>
+</p>
+
+<form asp-action="Index" method="get">
+    <div class="form-actions no-color">
+        <p>
+            Find by name: <input type="text" name="SearchString" value="@ViewData["CurrentFilter"]" />
+            <input type="submit" value="Search" class="btn btn-sm btn-secondary" /> |
+            <a asp-action="Index">Back to Full List</a>
+        </p>
+    </div>
+</form>
+
 <table class="table">
     <thead>
         <tr>
-            <th>@Html.DisplayNameFor(model => model.Name)</th>
-            <th>@Html.DisplayNameFor(model => model.Degree)</th>
-            <th>@Html.DisplayNameFor(model => model.MinimumDegree)</th>
-            <th>@Html.DisplayNameFor(model => model.Department)</th>
-            <th>@Html.DisplayNameFor(model => model.Instructor)</th>
+            <th>
+                @Html.DisplayNameFor(model => model.Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Degree)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Department)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Instructor)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -19,11 +42,18 @@
         @foreach (var item in Model)
         {
             <tr>
-                <td>@Html.DisplayFor(modelItem => item.Name)</td>
-                <td>@Html.DisplayFor(modelItem => item.Degree)</td>
-                <td>@Html.DisplayFor(modelItem => item.MinimumDegree)</td>
-                <td>@Html.DisplayFor(modelItem => item.Department.Name)</td>
-                <td>@Html.DisplayFor(modelItem => item.Instructor.Name)</td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Degree)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Department.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Instructor.Name)
+                </td>
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                     <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
