--- a/Project/Project/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
+++ b/Project/Project/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
@@ -1,8 +1,18 @@
 ﻿@page
 @model ConfirmEmailModel
 @{
-    ViewData["Title"] = "Confirm email";
+    ViewData["Title"] = "Email Confirmed";
 }
 
-<h1>@ViewData["Title"]</h1>
-<partial name="_StatusMessage" model="Model.StatusMessage" />
+<div class="text-center">
+    <h1 class="display-4 text-success">@ViewData["Title"]</h1>
+    <p class="lead mt-4">
+        Thank you for confirming your email.
+    </p>
+    <p>
+        You are now ready to log in and access the University Portal.
+    </p>
+    <div class="mt-4">
+        <a asp-page="./Login" class="btn btn-primary btn-lg">Click here to Log In</a>
+    </div>
+</div>
