--- a/Project/Project/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
+++ b/Project/Project/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
@@ -1,23 +1,30 @@
 ﻿@page
 @model RegisterConfirmationModel
 @{
-    ViewData["Title"] = "Register confirmation";
+    ViewData["Title"] = "Registration Complete";
 }
 
-<h1>@ViewData["Title"]</h1>
-@{
-    if (@Model.DisplayConfirmAccountLink)
-    {
-<p>
-    This app does not currently have a real email sender registered, see <a href="https://aka.ms/aspaccountconf">these docs</a> for how to configure a real email sender.
-    Normally this would be emailed: <a id="confirm-link" href="@Model.EmailConfirmationUrl">Click here to confirm your account</a>
-</p>
-    }
-    else
-    {
-<p>
-        Please check your email to confirm your account.
-</p>
-    }
-}
+<div class="text-center">
+    <h1 class="display-4">@ViewData["Title"]</h1>
 
+    @{
+        if (@Model.DisplayConfirmAccountLink)
+        {
+            <p class="lead mt-4">
+                Thank you for registering! Your account has been created.
+            </p>
+            <p>
+                Normally, a confirmation email would be sent to you. For this demonstration, you can confirm your account by clicking the link below.
+            </p>
+            <div class="mt-4">
+                <a id="confirm-link" href="@Model.EmailConfirmationUrl" class="btn btn-primary btn-lg">Click here to confirm your account</a>
+            </div>
+        }
+        else
+        {
+            <p class="lead mt-4">
+                Please check your email to confirm your account.
+            </p>
+        }
+    }
+</div>
