--- a/Project/Project/Views/Shared/_Layout.cshtml
+++ b/Project/Project/Views/Shared/_Layout.cshtml
@@ -34,11 +34,18 @@
                         @* --- UI RESTRICTION LOGIC --- *@
                         @if (SignInManager.IsSignedIn(User))
                         {
-                            // Link visible only to Admins
+                            // Links visible only to Admins
                             @if (User.IsInRole("Admin"))
                             {
                                 <li class="nav-item">
                                     <a class="nav-link" asp-controller="Departments" asp-action="Index">Departments</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" asp-controller="CourseStudents" asp-action="Index">Enrollments</a>
+                                </li>
+                                <!-- === THIS IS THE NEW LINK === -->
+                                <li class="nav-item">
+                                    <a class="nav-link" asp-controller="Users" asp-action="Index">Manage Users</a>
                                 </li>
                             }
 
@@ -49,8 +56,8 @@
                                     <a class="nav-link" asp-controller="Instructors" asp-action="Index">Instructors</a>
                                 </li>
                             }
-                            
-                             // Link visible to Admins, HR and Instructors
+
+                            // Link visible to Admins, HR and Instructors
                             @if (User.IsInRole("Admin") || User.IsInRole("HR") || User.IsInRole("Instructor"))
                             {
                                 <li class="nav-item">
@@ -62,13 +69,6 @@
                             <li class="nav-item">
                                 <a class="nav-link" asp-controller="Courses" asp-action="Index">Courses</a>
                             </li>
-
-                             @if (User.IsInRole("Admin"))
-                            {
-                                <li class="nav-item">
-                                    <a class="nav-link" asp-controller="CourseStudents" asp-action="Index">Enrollments</a>
-                                </li>
-                            }
                         }
                     </ul>
 
@@ -95,14 +95,6 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-    
-    @* --- SCRIPT FOR DELETE CONFIRMATION POPUP --- *@
-    <script>
-        // This function can be called from any delete button in the application
-        function confirmDelete() {
-            return confirm('Are you sure you want to delete this item?');
-        }
-    </script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
